Trying to fix spacing glitch on heroku. Added box-sizing to input-wrapper

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -443,6 +443,7 @@ input[type="submit"] {
 .album-thumb-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   margin: auto;
 }
 
@@ -529,6 +530,7 @@ input[type="submit"] {
   width: 490px;
   display: flex;
   flex-direction: column;
+  box-sizing: content-box;
 }
 
 .album-form-box .input-wrapper input {
